language/move-lang/tests/move_check/naming/standalone_mname.exp
error[E03005]: unbound unscoped name
  ┌─ tests/move_check/naming/standalone_mname.move:3:17
  │
3 │         let m = M;
  │                 ^ Unbound constant 'M'

